# spec-elf

./: Cargo.toml  README.md
fuzz/: Cargo.toml
src/: main.rs
src/arch/: x86.rs
src/archive/: format.rs
src/builder/: compile.rs
src/compile_logic/: language.rs
src/package_logic/: format.rs
