[package]
name = "spec-elf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
raw-cpuid = "11"

[dev-dependencies]
tempfile = "3.27.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
overflow-checks = true
debug-assertions = true
panic = "unwind"
incremental = true
codegen-units = 256
