[package]
name = "spec-elf-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.spec-elf]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "help"
path = "fuzz_targets/help.rs"
test = false
doc = false
bench = false

[[bin]]
name = "main"
path = "fuzz_targets/main.rs"
test = false
doc = false
bench = false
